--- a/radio/src/translations/pl.h.txt
+++ b/radio/src/translations/pl.h.txt
@@ -72,7 +72,7 @@
 #define TR_UART3MODES          "Wyłącz\0        ""S-Port Mirror\0 ""Debug\0         "
 
 #define LEN_POTTYPES           "\017"
-#define TR_POTTYPES            "Potencjometr\0  ""Przeł.Wielopoz."
+#define TR_POTTYPES            "None\0          ""Potencjometr\0  ""Przeł.Wielopoz."
 
 #define LEN_DATETIME           "\006"
 #define TR_DATETIME            "DATA:\0""CZAS:\0"
