--- a/radio/src/translations/en.h.txt
+++ b/radio/src/translations/en.h.txt
@@ -319,8 +319,8 @@
 #define LEN_VTELPROTO          "\007"
 #define TR_VTELPROTO           "None\0  ""Hub\0   ""WSHHigh"
 
-#define LEN_VOLTSRC            "\003"
-#define TR_VOLTSRC             "---""A1\0""A2\0""FAS""Cel"
+#define LEN_VOLTSRC            TR("\003", "\007")
+#define TR_VOLTSRC             TR("---""A1\0""A2\0""FAS""Cel", "---\0   ""A1\0    ""A2\0    ""FAS\0   ""Cells\0 ")
 
 #define LEN_VARIOSRC           "\004"
 #if defined(FRSKY_SPORT)
