--- a/radio/src/translations/fr.h.txt
+++ b/radio/src/translations/fr.h.txt
@@ -83,8 +83,8 @@
 #define LEN_VTRIMINC           TR("\006","\013")
 #define TR_VTRIMINC            TR("Expo\0 ""ExFin\0""Fin\0  ""Moyen\0""Gros\0 ","Exponentiel""Extra Fin\0 ""Fin\0       ""Moyen\0     ""Grossier\0  ")
 
-#define LEN_VBEEPCOUNTDOWN     "\006"
-#define TR_VBEEPCOUNTDOWN      "SilentBeeps\0Voice\0"
+#define LEN_VBEEPCOUNTDOWN     "\007"
+#define TR_VBEEPCOUNTDOWN      "Silence""Bips\0  ""Voix\0  "
 
 #define LEN_RETA123            "\001"
 
@@ -149,7 +149,7 @@
 
 #if defined(PCBTARANIS)
   #define TR_CSWTIMER          "Tempo"
-  #define TR_CSWSTICKY         "Bist."
+  #define TR_CSWSTICKY         "Bistb"
   #define TR_CSWRANGE          "Plage"
   #define TR_CSWSTAY           "Flanc"
 #else
@@ -172,9 +172,9 @@
 
 #define LEN_VCSWFUNC           "\005"
 #if defined(CPUARM)
-#define TR_VCSWFUNC            "---\0 " TR_CSWEQUAL "a{x\0 ""a>x\0 ""a<x\0 " TR_CSWRANGE "|a|>x""|a|<x""AND\0 ""OR\0  ""XOR\0 " TR_CSWSTAY "a=b\0 ""a>b\0 ""a<b\0 ""Δ}x\0 ""|Δ|}x" TR_CSWTIMER TR_CSWSTICKY
+#define TR_VCSWFUNC            "---\0 " TR_CSWEQUAL "a{x\0 ""a>x\0 ""a<x\0 " TR_CSWRANGE "|a|>x""|a|<x""ET\0  ""OU\0  ""OUX\0 " TR_CSWSTAY "a=b\0 ""a>b\0 ""a<b\0 ""Δ}x\0 ""|Δ|}x" TR_CSWTIMER TR_CSWSTICKY
 #else
-#define TR_VCSWFUNC            "---\0 " TR_CSWEQUAL "a{x\0 ""a>x\0 ""a<x\0 " TR_CSWRANGE "|a|>x""|a|<x""AND\0 ""OR\0  ""XOR\0 " TR_CSWSTAY "a=b\0 ""a>b\0 ""a<b\0 ""^}x\0 ""|^|}x" TR_CSWTIMER TR_CSWSTICKY
+#define TR_VCSWFUNC            "---\0 " TR_CSWEQUAL "a{x\0 ""a>x\0 ""a<x\0 " TR_CSWRANGE "|a|>x""|a|<x""ET\0  ""OU\0  ""OUX\0 " TR_CSWSTAY "a=b\0 ""a>b\0 ""a<b\0 ""^}x\0 ""|^|}x" TR_CSWTIMER TR_CSWSTICKY
 #endif
 
 #define LEN_VFSWFUNC           "\015"
@@ -231,8 +231,10 @@
   #define TR_CFN_TEST
 #endif
 
+#define TR_CFN_RESERVE         "[reserve]\0   "
+
 #if defined(CPUARM)
-  #define TR_VFSWFUNC          "Sécur.\0      ""Ecolage\0     ""Trim instant.""Remise à 0\0  ""Set \0        " TR_ADJUST_GVAR "Volume\0      " TR_SOUND TR_PLAY_TRACK TR_PLAY_VALUE TR_CFN_BG_MUSIC TR_VVARIO TR_HAPTIC TR_SDCLOGS "Rétroécl.\0   " TR_CFN_TEST
+  #define TR_VFSWFUNC          "Sécur.\0      ""Ecolage\0     ""Trim instant.""Remise à 0\0  ""Déf \0        " TR_ADJUST_GVAR "Volume\0      " TR_CFN_RESERVE TR_CFN_RESERVE TR_CFN_RESERVE TR_SOUND TR_PLAY_TRACK TR_PLAY_VALUE TR_CFN_RESERVE TR_CFN_RESERVE TR_CFN_RESERVE TR_CFN_BG_MUSIC TR_VVARIO TR_HAPTIC TR_SDCLOGS "Rétroécl.\0   " TR_CFN_TEST
 #elif defined(PCBGRUVIN9X)
   #define TR_VFSWFUNC          "Sécur.\0      ""Ecolage\0     ""Trim instant.""Remise à 0\0  " TR_ADJUST_GVAR TR_SOUND TR_PLAY_TRACK TR_PLAY_BOTH TR_PLAY_VALUE TR_VVARIO TR_HAPTIC TR_SDCLOGS "Rétroécl.\0   " TR_CFN_TEST
 #else
@@ -439,7 +441,7 @@
 #define TR_MODELNAME           TR("Nom modèle","Nom du modèle")
 #define TR_PHASENAME           "Nom phase"
 #define TR_MIXNAME             TR("Nom mix.","Nom du mixeur")
-#define TR_INPUTNAME           "Input Name"
+#define TR_INPUTNAME           "Nom entrée"
 #if defined(PCBTARANIS)
   #define TR_EXPONAME          "Nom ligne"
 #else
@@ -451,7 +453,7 @@
 #define TR_ETRIMS              TR("Trims ét.", "Trims étendus")
 #define TR_TRIMINC             TR("Pas Trim", "Pas des trims")
 #define TR_TTRACE              TR("Source gaz", INDENT "Source gaz")
-#define TR_TTRIM               TR("Trim gaz", INDENT "Trim gaz")
+#define TR_TTRIM               TR("Trim gaz", INDENT "Trim ralenti")
 #define TR_BEEPCTR             TR("Bips centr", "Bips centrage")
 #define TR_PROTO               TR(INDENT "Proto.", INDENT "Protocole")
 #define TR_PPMFRAME            INDENT "Trame PPM"
@@ -525,8 +527,8 @@
 #define TR_BLOFFBRIGHTNESS     INDENT "Luminosité OFF"
 #define TR_SPLASHSCREEN        "Logo d'accueil"
 #define TR_THROTTLEWARNING     TR("Alerte gaz", INDENT "Alerte gaz")
-#define TR_SWITCHWARNING       TR("Alerte int", INDENT "Alerte interrupt.")
-#define TR_POTWARNING          TR("Alerte pot", INDENT "Alerte potentiom.")
+#define TR_SWITCHWARNING       TR("Alerte int", INDENT "Pos. interrupteurs")
+#define TR_POTWARNING          TR("Alerte pot", INDENT "Pos. potentiom.")
 #define TR_TIMEZONE            "Fuseau horaire"
 #define TR_RXCHANNELORD        TR("Ordre voies RX","Ordre des voies préféré")
 #define TR_SLAVE               "Elève"
@@ -721,7 +723,7 @@
 #define TR_LOWALARM            INDENT "Alarme basse"
 #define TR_CRITICALALARM       INDENT "Alarme critique"
 #define TR_PERSISTENT_MAH      TR(INDENT "Enr. mAh", INDENT "Enregistrer mAh")
-#define TR_PREFLIGHT           "Preflight Checks"
+#define TR_PREFLIGHT           "Vérifications avant vol"
 #define TR_CHECKLIST           INDENT "Afficher notes"
 #define TR_FAS_OFFSET          TR(INDENT "Corr FAS", INDENT "Correction FAS")
 #define TR_UART3MODE           "Port série"
@@ -753,8 +755,8 @@
 #endif
 
 // Taranis column headers
-#define TR_PHASES_HEADERS      { " Nom ", " Inter ", " Trims ", " Fondu ON ", " Fondu OFF " }
-#define TR_LIMITS_HEADERS      { " Nom ", " Subtrim ", " Min ", " Max ", " Direction ", " Curve ", " Neutre PPM ", " Mode subtrim " }
+#define TR_PHASES_HEADERS      { " Nom ", " Inter ", " Trim Dir ", " Trim Prf ", " Trim Gaz ", " Trim Ail ", " Fondu ON ", " Fondu OFF " }
+#define TR_LIMITS_HEADERS      { " Nom ", " Subtrim ", " Min ", " Max ", " Direction ", " Courbe ", " Neutre PPM ", " Mode subtrim " }
 #define TR_CSW_HEADERS         { " Fonction ", " V1 ", " V2 ", " V2 ", " ET suppl. ", " Durée ", " Délai " }
 
 //Taranis About screen
